--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,20 @@
 # Compiled class file
 *.class
+# 编译生成文件
+*.class
+target/
+build/
 
+# 日志文件
+*.log
+
+# IDE配置文件
+.idea/
+.vscode/
+
+# Jar/War包
+*.jar
+*.war
 # Log file
 *.log
 
